syntax = "proto3";

package NCloud.NBlockStore.NProto;

option java_package = "ru.yandex.cloud.blockstore.proto";
option go_package = "a.yandex-team.ru/cloud/blockstore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////

message TRdmaEndpoint
{
    string Host = 1;
    uint32 Port = 2;
}
